--- a/app/templates/conf/_app.conf
+++ b/app/templates/conf/_app.conf
@@ -1,7 +1,7 @@
 appname = <%= baseName %>
 httpport = <%= appPort %>
 runmode = dev
-autorender = false
+autorender = true
 copyrequestbody = true
 TemplateLeft = {{<
 TemplateRight = >}}
