--- a/app/templates/conf/_app.conf
+++ b/app/templates/conf/_app.conf
@@ -6,7 +6,7 @@ copyrequestbody = true
 TemplateLeft = {{<
 TemplateRight = >}}
 EnableAdmin =true
-sessionon = false
+sessionon = true
 SessionName = sessionid
 #SessionProvider = "redis"
 #SessionSavePath = "ip_redis_server:6379"
