--- a/app/templates/conf/_locale_en-US.ini
+++ b/app/templates/conf/_locale_en-US.ini
@@ -3,6 +3,13 @@ grn = uah.
 period_once = once
 period_month = month
 
+home = Home
+about = About
+copyright = Copyright
+blog = Blog
+search = Search
+help = Help
+
 # Welcome page
 welcome = Welcome to chat
 set_profile = Setting profile
@@ -12,12 +19,226 @@ longpolling = Long Polling
 websocket = WebSocket
 enter_chat = Enter chat room
 
-# Long polling
-longpolling_chatroom = Long polling chat room
+time_load = Time loading page
+powered_by = Powered by
+based_on = Based on
+icons_from = Icons from
+language_choice = Language
+all_language = All Language
 
-# WebSocket
-websocket_chatroom = WebSocket chat room
+atom_feed_subscribe = Atom Feed Subscribe
 
-# Chat room
+delete = Delete
+update = Update
+create = Create
+save = Save
+more = More
+submit = Submit
+descard = Discard
+
+seconds_ago = %d seconds ago
+minutes_ago = %d minutes ago
+hours_ago = %d hours ago
+days_ago = %d days ago
+
+en-US = English
+ua-UA = Ukrainian
 send_box = Send box
 chat_history = Chat history
+
+[user]
+
+home = User Home
+followers = Followers
+following = Following
+favtopics = Fav Topics
+joined_on = Joined on
+recent_submited_posts = Recent Submited Posts
+recent_comments = Recent Comments
+more_posts = More Posts
+more_comments = More Comments
+lazy_info = This is a lazy guy.
+follow_user = Follow
+follow_remove = UnFollow
+follow_mutual = Mutualed
+follower_users = %s's followers
+following_users = %s following users
+you_following_users = Your following users
+following_topics = %s following topics
+
+[auth]
+
+logout = Logout
+logout_success = Logout success.
+
+sign_in= Sign in
+sign_up= Sign up
+
+sign_with_social = Social login
+sign_register = Register
+sign_connect = Connect
+sign_connect_error = User not exist or wrong password.
+sign_connect_error_repeat = Your account has connected with %s, cannot reconnect.
+sign_register_title = Connect to new account
+sign_connect_title = Connect to exist account
+sign_connect_success_to = Connect to %s success.
+sign_connect_error_to = Connect to %s failed.
+
+login = Login
+login_username = Username
+login_password = Password
+login_your_account = Login your account
+login_email = Email
+login_remember_me = Remember Me
+login_now = Login Now
+login_no_permit = No permit access page, please re-login.
+login_account_forbid = Your account was forbided by admin.
+login_error = User not exist or Password was Wrong, please check it!
+login_error_ajax = User not exist or Password was Wrong, please check it!
+login_error_times_reached = Max retries reached, plz wait a monent.
+login_if_not_register = If you have not registered. Please Sign Up.
+login_success_ajax = Success! Reloading page, plz wait.
+login_success_failed = User not exist or Password was Wrong.
+
+need_login_to_reply = Login to reply
+need_active_to_reply = Your account need active
+
+username_or_email = Username or Email
+retype_password = Retype Password
+
+plz_enter_username = Please enter your username
+plz_enter_email = Please enter your e-mail address
+plz_enter_password = Please enter your password
+plz_reenter_password = Please reenter your password
+plz_enter_gremail = You can enter an another gravatar token
+plz_enter_website = Please enter your website url
+plz_enter_your_info = Please say something introduce yourself
+plz_enter_old_password = Please enter your old password
+plz_enter_new_password = Please enter your new password
+
+forgotform_email_help = This operation lead to send your an e-mail with a reset secure link
+forgotform_wrong_email = Invalid email address, please check your input
+
+register = Register
+register_if_you_registered = If you have already registered. Please Sign In.
+register_now = Register Now
+register_success = Congratulations!
+register_success_message = We have sent a verify e-mail to your mail box, please veify that before you can continue.
+register_error = Register error, please retry.
+
+active_user = User Active
+active_verified = Your email account has verified.
+active_view_profile = View my profile settings
+active_success = Active Success!
+active_failed = Active Failed!
+active_failed_reason = Your email account not verified, may be your verify code expired or already used.
+active_resend = Resend active email
+
+need_active = Need Active
+need_active_message = To access page, require verify your e-mail.
+
+forgot_password = Forgot Password
+forgot_sended = Email sended
+forgot_sended_msg = Please check your mailbox, and click the secure link to reset password.
+forgot_reset_success = Password reset success. please login.
+
+reset_password = Reset Password
+reset_resend = Resend verify email
+reset_if_remember_sign_in = "If you remember your password suddently, please Sign In.
+reset_failed = Failed Verify!
+reset_failed_reason = Your verify code not verified, may be it expired or already used.
+
+user_profile = User Profile
+profile_saved = Profile success saved.
+password_changed = Password success changed.
+base_profile = Base Profile
+please_verify_email = Please verify your e-mail address.
+verify_email_sended = Sended!
+send_verify_email = Send verifiy email
+save_profile = Save Profile
+change_password = Change password
+profile_gremail = Gravatar Token
+profile_gremail_help = Enter an email will convert to token, direct input token is supported
+profile_url = Your Website
+profile_publicemail = Public your email
+profile_lang = Preferred Language
+profile_lang_additional = Additional Language
+profile_info = About you
+old_password = Old Password
+new_password = New Password
+user_settings = Settings
+old_password_wrong = Your old password not correct
+social_info = Social Info
+
+repassword_not_match = Password not match first input
+username_already_taken = Username has been already taken
+email_already_taken = Email has been already taken
+
+captcha = Captcha
+captcha_wrong = Error captcha code
+captcha_click_refresh = Click image to refresh
+plz_enter_captcha = Please input captcha code
+
+[admin]
+
+success_create = Success create
+success_update = Success update
+success_delete = Success delete
+
+admin_center = Admin Center
+admin_console = Admin Console
+
+not_found_by_id = Not found by this id
+field_need_unique = Field value need unique
+
+[paginator]
+
+first_page = First Page
+last_page = Last Page
+prev_page = Prev Page
+next_page = Next Page
+
+[valid]
+
+min_length_is = Min-length is %v
+max_length_is = Max-length is %v
+only_contains = only contains %v
+
+Can not be empty = Can not be empty
+Minimum is %d = Minimum is %d
+Maximum is %d = Maximum is %d
+Range is %d to %d = Range is %d to %d
+Minimum size is %d = Minimum size is %d
+Maximum size is %d = Maximum size is %d
+Required length is %d = Required length is %d
+Must be valid alpha characters = Must be valid alpha characters
+Must be valid numeric characters = Must be valid numeric characters
+Must be valid alpha or numeric characters = Must be valid alpha or numeric characters
+Must match %s = Must match %s
+Must not match %s = Must not match %s
+Must be valid alpha or numeric or dash(-_) characters = Must be valid alpha or numeric or dash(-_) characters
+Must be a valid email address = Must be a valid email address
+Must be a valid ip address = Must be a valid ip address
+Must be valid base64 characters = Must be valid base64 characters
+Must be valid mobile number = Must be valid mobile number
+Must be valid telephone number = Must be valid telephone number
+Must be valid telephone or mobile phone number = Must be valid telephone or mobile phone number
+Must be valid zipcode = Must be valid zipcode
+
+[mail]
+
+register_success_subject = Register success, Welcome
+reset_password_subject = Reset your password
+verify_your_email_subject = Verify your email address
+
+[editor]
+
+insert = Insert
+insert_image = Insert Image
+upload_image = Upload
+image_link = Image Link
+plz_enter_image_link = Please enter image link
+upload_success = Upload Success!
+upload_failed = Upload Failed! Please retry.
+upload_select = Select File
+upload_now = Upload Now
