added auth generator

--- a/app/templates/conf/_app.conf
+++ b/app/templates/conf/_app.conf
@@ -1,5 +1,6 @@
 appname = <%= baseName %>
 httpport = <%= appPort %>
+apphost = localhost
 runmode = dev
 autorender = true
 copyrequestbody = true
@@ -8,12 +9,13 @@ TemplateRight = >}}
 EnableAdmin =true
 sessionon = true
 SessionName = sessionid
-#SessionProvider = "redis"
-#SessionSavePath = "ip_redis_server:6379"
+; SessionProvider = "redis"
+; SessionSavePath = "ip_redis_server:6379"
 
 enablexsrf = false
 xsrfkey = genKey
 xsrfexpire = 3600
+secret = 123456789
 
 mysqluser = "name"
 mysqlpass = "password"
@@ -23,3 +25,24 @@ mysqlport = "3306"
 
 lang_types = en-US|ua-UA
 lang_default = "ua-UA"
+lang = "ua-UA"
+
+; max login retry times
+LoginMaxRetries = 5
+
+; login failed block minutes
+LoginFailedBlocks = 10
+
+; login remember days.
+; remember and auto login.
+; when the user auto login, will reset the remember days.
+LoginRememberDays = 7
+
+; use for store login remember info
+CookieRememberName = wetalk_magic
+CookieUserName = wetalk_powerful
+
+; date format
+DateFormat = Y-m-d
+DateTimeFormat = Y-m-d H:i:s
+DatetimeShortFormat = Y-m-d H:i
