--- a/app/templates/conf/_app.conf
+++ b/app/templates/conf/_app.conf
@@ -1,6 +1,7 @@
 appname = <%= baseName %>
 httpport = <%= appPort %>
 apphost = localhost
+AppUrl = http://localhost/
 runmode = dev
 autorender = true
 copyrequestbody = true
@@ -46,4 +47,3 @@ CookieUserName = wetalk_powerful
 DateFormat = Y-m-d
 DateTimeFormat = Y-m-d H:i:s
 DatetimeShortFormat = Y-m-d H:i
-
