--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "generator-beego",
-	"version": "0.2.6",
+	"version": "0.3.0",
 	"description": "A Yeoman generator for AngularJS + Go + Beego + MySQL",
 	"keywords": [
 		"yeoman-generator",
@@ -32,13 +32,14 @@
 		"lodash": "~2.4.1",
 		"underscore.string": "~2.3.3",
 		"pluralize": "~0.0.6",
-		"asciify": "~1.3.3"
+		"asciify": "~1.3.3",
+		"git-config": "0.0.3"
 	},
 	"devDependencies": {
 		"mocha": "~1.14.0"
 	},
 	"peerDependencies": {
-		"yo": ">=1.0.0"
+		"yo": ">=1.1.2"
 	},
 	"engines": {
 		"node": ">=0.8.0",
